[package]
name = "coingecko"
version = "0.1.0"
description = "CoinGecko v3 API"
repository = "https://github.com/mmstick/coingecko-rs"
license = "MIT"
keywords = [ "cryptocurrency" ]
authors = ["Michael Aaron Murphy <mmstick@pm.me>"]
edition = "2018"
readme = "README.md"

[dependencies]
const_format = "0.2"
thiserror = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"]}
isahc = { version = "0.9", default-features = false, features = ["http2", "text-decoding"]}
futures-lite = "1.11"
rust_decimal = "1.8"
derive_setters = "0.1"
fomat-macros = "0.3"

[dev-dependencies]
smol = "1.2"